# strands-agents-memory

./: .gitignore  1_eval_arize_llm_as_a_judge.py  1_eval_arize_tracing.py  1_eval_built_in_llm_as_a_judge.py  1_eval_built_in_manual.py  1_eval_built_in_tracing.py  2_eval_arize_llm_as_a_judge.py  2_eval_arize_manual.py  2_eval_arize_tracing.py  2_eval_langfuse_llm_as_a_judge.py  2_eval_langfuse_real_user.py  2_eval_langfuse_synthetic.py  2_eval_langfuse_tracing.py  3_eval_arize_real_user.py  3_eval_langfuse_llm_as_a_judge.py  3_eval_langfuse_manual.py  3_eval_langfuse_tracing.py  README.md  eval_arize_llm_as_a_judge.py  eval_built_in.py  eval_langfuse_ragas.py  main.py  movie_database.py  movie_evaluation_scenarios.json  pyproject.toml  requirements.txt  strands_to_openinference_mapping.py
strands_agents_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: rate_movie.py  recommend_movies.py
