[project]
name = "strands-agents-memory"
version = "0.1.0"
description = "Movie recommendation agent showcasing Strands memory capabilities"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.3.0",
    "strands-agents-tools>=0.2.3",
    "mem0ai",
    "opensearch-py>=3.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.0.0",
    "faiss-cpu>=1.11.0.post1",
    "numpy>=1.26.0",
    "langfuse>=3.3.0",
    "ragas>=0.3.2",
    "datasets>=2.0.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "pyarrow>=15.0.0",
    "arize-phoenix",
    "arize-otel>=0.10.0",
    "openinference-instrumentation-bedrock>=0.1.27",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "movie_database"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
