[project]
name = "strands-agents-memory"
version = "0.1.0"
description = "Movie recommendation agent showcasing Strands memory capabilities"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.3.0",
    "strands-agents-tools>=0.2.3",
    "mem0ai",
    "opensearch-py>=3.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.0.0",
    "faiss-cpu>=1.11.0.post1",
    "numpy>=1.26.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "arize-phoenix",
    "arize-otel>=0.10.0",
    "openinference-instrumentation-bedrock>=0.1.27",
    "arize[datasets]>=7.50.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "movie_database"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
